--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ table, caption, tbody, tfoot, thead, tr, th, td
     border: 0;
     font-weight: inherit;
     font-style: inherit;
-    font-family: inherit;
+    font-family: 'Ubuntu Mono';
     vertical-align: baseline;
 }
 
@@ -33,14 +33,6 @@ body
     margin-top:50px;
 }
 
-table { border-collapse: separate; border-spacing: 0; }
-caption, th, td { text-align: left; font-weight: normal; }
-
-blockquote:before, blockquote:after, q:before, q:after { content: ""; }
-blockquote, q { quotes: "" ""; }
-
-a img { border: none; }
-
 p           { margin: 0 0 1.5em; }
 img         { margin: 0 0 1.5em; }
 
@@ -54,43 +46,15 @@ h1
     text-align:right;
 }
 
-
-
-#content a
-{
-    color:inherit;
-    text-decoration:none;
-    #border-bottom:1px solid;
-    color: #8e44ad;
-}
-
-* html #content a
-{
-    color:#8e44ad;
-    text-decoration:none;
-    border-bottom:1px solid #eee;
-}
-
-sup.footnote a, .footnote sup
-{
-    font-weight:normal;
-    padding:0 0 0 0.27em ;
-    text-decoration:none;
-    color:#8e44ad;
-}
-
-object
-{
-    clear:both;
-    margin:3em 25%;
-}
-
 #container
 {
     background: #ecf0f1;
     width: 650px;
     margin: 0 auto;
     padding:20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
 }
 
 #content
@@ -178,6 +142,10 @@ object
     display:block;
 }
 
+.navigation #header {
+    text-align:center;
+}
+
 .navigation.home
 {
     padding:28% 0 0 0;
@@ -189,7 +157,7 @@ object
 .navigation .section
 {
     float: left;
-    width: 120px;
+    width: 150px;
     list-style: none;
     margin: 3em 10px 3em 0;
     padding: 0;
@@ -205,13 +173,6 @@ object
     font-weight: bold;
     color: #8e44ad;
     text-decoration: none;
-}
-
-.selected
-{
-    text-decoration: none;
-    font-weight: normal;
-    color: #666;
 }
 
 .navigation .section ul a:hover
@@ -245,36 +206,18 @@ object
     border-top: 1px solid #eee;
 }
 
-#content a.next
-{
-    font-weight:normal;
-    color:#000;
-    display:block;
-    border-top:1px solid;
-    border-bottom:0px;
-    line-height:1.1;
-    margin-top:17px;
-    text-decoration:none;
-    margin-left:-1em;
-    padding-left:1em;
-    padding-bottom:1px;
-    outline:none;
-}
-
-* html #content a.next
-{
-    border-top: 1px solid #ddd;
-}
-
-#content a.next:hover
-{
-    color:#666;
-    border-color:#ccc;
-    text-decoration:none;
-}
 
 a.anchor
 {
     text-decoration:none;
     display:block;
+}
+
+.snippet-border {
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    background:rgba(227,162,11,0.5);
+    font-weight: bold;
+    margin:20px;
 }
